--- a/public/view/registration.html
+++ b/public/view/registration.html
@@ -21,7 +21,7 @@
         <div class="col-md-6">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    Restration
+                    Registration
                 </div>
                 <div class="panel-footer">
                     <div class="input-group">
@@ -42,7 +42,7 @@
                     <br />
                     <div class="input-group">
                         <span class="input-group-btn">
-                            <button class="btn btn-info" type="button" ng-click="registration()" >Restration</button>
+                            <button class="btn btn-info" type="button" ng-click="registration()" >Registration</button>
                         </span>
                     </div>
                 </div>
